fix: contactSlideInBox overflow: auto

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -102,6 +102,7 @@
   display: flex;
   left: 500px;
   flex-direction: column;
+  padding-bottom : 16px;
 }
 
 .bigCircle {
